fix: Check if the pageable sort already contains the additional sort.
If it does or is equal to, don't add it a second time.

Fixes #2940